crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-oscar__src__oscar__templatetags__string_filters.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-oscar/src/oscar/templatetags/string_filters.py
---
tag_rules: {}
filter_arities:
  "src.oscar.templatetags.string_filters::filter::split":
    expects_arg: true
    arg_optional: true
block_specs: {}
